added the first blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Github</title>
-</head>
+    <title>First Simle Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
+    </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p class="me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
+    </div>    
 </body>
 </html>
