added the first blog

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h3>My First Website</h3>
-        <p class="me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
     </div>    
 </body>
 </html>
