--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
+    </div>    
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
+    </div>    
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
     </div>    
 </body>
