added the image blog

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione impedit saepe eum accusamus suscipit placeat unde aperiam totam in. Consectetur perferendis maiores tenetur est odit dicta veniam rerum doloribus corrupti?</p>
     </div>    
+    <div>
+        <h3>Developer</h3>
+        <img src="Nature.jpg" alt="Nature">
+    </div>
 </body>
 </html>
